--- a/MikeRobbins.UrlLengthValidator/MikeRobbins.UrlLengthItemValidator.csproj
+++ b/MikeRobbins.UrlLengthValidator/MikeRobbins.UrlLengthItemValidator.csproj
@@ -90,8 +90,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\Contracts\ISitecoreLinkManager.cs" />
     <Compile Include="Providers\Contracts\ISettingsProvider.cs" />
+    <Compile Include="Providers\Contracts\ISiteProvider.cs" />
     <Compile Include="Providers\Implementation\SettingsProvider.cs" />
     <Compile Include="Providers\Implementation\SitecoreLinkManager.cs" />
+    <Compile Include="Providers\Implementation\SiteProvider.cs" />
     <Compile Include="UrlLengthCalculator.cs" />
     <Compile Include="UrlLengthValidator.cs" />
     <Compile Include="UrlValidator.cs" />
