--- a/MikeRobbins.UrlLengthValidator/packages.config
+++ b/MikeRobbins.UrlLengthValidator/packages.config
@@ -3,4 +3,5 @@
   <package id="AutoMapper" version="4.0.4" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
+  <package id="structuremap" version="3.1.6.186" targetFramework="net45" />
 </packages>
