patch file for settings

--- a/MikeRobbins.UrlLengthValidator/MikeRobbins.UrlLengthItemValidator.csproj
+++ b/MikeRobbins.UrlLengthValidator/MikeRobbins.UrlLengthItemValidator.csproj
@@ -81,6 +81,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app_config\include\MikeRobbinsUrlLengthValidator.xml" />
     <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -107,6 +108,7 @@
     <Compile Include="UrlLengthValidator.cs" />
     <Compile Include="UrlChecker.cs" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
