Namespace clean up

--- a/MikeRobbins.UrlLengthValidator/MikeRobbins.UrlLengthItemValidator.csproj
+++ b/MikeRobbins.UrlLengthValidator/MikeRobbins.UrlLengthItemValidator.csproj
@@ -99,12 +99,12 @@
     <Compile Include="Contracts\IUrlChecker.cs" />
     <Compile Include="IoC\Registry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\Contracts\ISitecoreLinkManager.cs" />
-    <Compile Include="Providers\Contracts\ISettingsProvider.cs" />
-    <Compile Include="Providers\Contracts\ISiteProvider.cs" />
-    <Compile Include="Providers\Implementation\SettingsProvider.cs" />
-    <Compile Include="Providers\Implementation\SitecoreLinkManager.cs" />
-    <Compile Include="Providers\Implementation\SiteProvider.cs" />
+    <Compile Include="Contracts\ISitecoreLinkManager.cs" />
+    <Compile Include="Contracts\ISettingsProvider.cs" />
+    <Compile Include="Contracts\ISiteProvider.cs" />
+    <Compile Include="Providers\SettingsProvider.cs" />
+    <Compile Include="Providers\SitecoreLinkManager.cs" />
+    <Compile Include="Providers\SiteProvider.cs" />
     <Compile Include="UrlLengthCalculator.cs" />
     <Compile Include="UrlLengthValidator.cs" />
     <Compile Include="UrlChecker.cs" />
